<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/member_avatar"
        android:layout_width="@dimen/detail_avatar_size"
        android:layout_height="@dimen/detail_avatar_size"
        android:contentDescription="@string/contentDecription_teamMemberAvatar"
        android:padding="@dimen/padding_double"
        tools:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"/>


    <TextView
        android:id="@+id/member_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/padding_standard"
        android:textSize="@dimen/detail_name_text"
        tools:text="FirstName LastName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"/>


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideline"/>

    <TextView
        android:id="@+id/labelLogin"
        style="@style/member_label"
        android:text="@string/label_login"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintBottom_toTopOf="@id/labelCompany"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/labelCompany"
        style="@style/member_label"
        android:visibility="visible"
        android:text="@string/label_company"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/labelLogin"
        app:layout_constraintBottom_toTopOf="@id/labelEmail"/>
    <TextView
        android:id="@+id/labelEmail"
        style="@style/member_label"
        android:visibility="visible"
        android:text="@string/label_email"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/labelCompany"
        app:layout_constraintBottom_toTopOf="@id/labelType"
        />

    <TextView
        android:id="@+id/labelType"
        style="@style/member_label"
        android:text="@string/label_type"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/labelEmail"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/member_login"
        style="@style/member_info"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintBottom_toTopOf="@id/member_company"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/member_company"
        style="@style/member_info"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/member_login"
        app:layout_constraintBottom_toTopOf="@id/member_email"/>

    <TextView
        android:id="@+id/member_email"
        style="@style/member_info"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/member_company"
        app:layout_constraintBottom_toTopOf="@id/member_type"
        />


    <TextView
        android:id="@+id/member_type"
        style="@style/member_info"
        app:layout_constraintStart_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/member_email"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/infoVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
